--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
     <link rel="stylesheet" href="./css/animate.min.css">
-    <script defer type="module" src="./index.js"></script>
+    <script defer async type="module" src="./index.js"></script>
     
 </head>
 <body> 
@@ -77,7 +77,7 @@
         </div>
         
         <div id="container">
-            <div class="container-results">
+            <div class="container-results" onclick="myfunction()">
                 <div class="_image-container">
                     <img src="./assets/images/icons/heart.png" alt="">
                     <img src="./assets/images/empty-image.png" alt="Image 1">
