--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     
 </head>
 <body> 
+    <div id="modal-favorites">
+        <div id="modal_center">
+            <h4>Abrigo</h4>
+            <p>4 en Favoritos <a href="">comprar</a></p>
+        </div>
+
+
+    </div>
     <svg id="shape-main" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="" fill-opacity="1" d="M0,256L60,234.7C120,213,240,171,360,149.3C480,128,600,128,720,149.3C840,171,960,213,1080,218.7C1200,224,1320,192,1380,176L1440,160L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
     <nav>
         
