View: change slider

--- a/index.html
+++ b/index.html
@@ -29,52 +29,7 @@
         </ul>
     </nav>
     <div id="index-content">
-        <div class="content_box-animation-slide">
-                <div class="content_image">
-                    <div class="image_info">
-                        <h1>Habitación</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti iure adipisci veniam. Vero autem cumque nisi pariatur amet culpa eligendi asperiores. Mollitia odio explicabo quidem fugiat laborum, optio soluta dignissimos?</p>
-                    </div>
-                    <img src="./assets/images/unsplash-macrame1.jpg" alt="macrame-dormitorio">
-                </div>
-                <div class="content_image">
-                    <div class="image_info">
-                        <h1>Habitación</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti iure adipisci veniam. Vero autem cumque nisi pariatur amet culpa eligendi asperiores. Mollitia odio explicabo quidem fugiat laborum, optio soluta dignissimos?</p>
-                    </div>
-                    <img src="./assets/images/unsplash-macrame2.jpg" alt="macrame-jardin">
-                </div>
-                <div class="content_image">
-                    <div class="image_info">
-                        <h1>Habitación</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti iure adipisci veniam. Vero autem cumque nisi pariatur amet culpa eligendi asperiores. Mollitia odio explicabo quidem fugiat laborum, optio soluta dignissimos?</p>
-                    </div>
-                    <img src="./assets/images/unsplash-macrame3.jpg" alt="macrame-decorativo">
-                </div>
-        </div>
-        <div class="content_box-animation-slide">
-            <div class="content_image">
-                <div class="image_info">
-                    <h1>Habitación</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti iure adipisci veniam. Vero autem cumque nisi pariatur amet culpa eligendi asperiores. Mollitia odio explicabo quidem fugiat laborum, optio soluta dignissimos?</p>
-                </div>
-                <img src="./assets/images/woman-face.jpg" alt="macrame-dormitorio">
-            </div>
-            <div class="content_image">
-                <div class="image_info">
-                    <h1>Habitación</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti iure adipisci veniam. Vero autem cumque nisi pariatur amet culpa eligendi asperiores. Mollitia odio explicabo quidem fugiat laborum, optio soluta dignissimos?</p>
-                </div>
-                <img src="./assets/images/manualidades.jpg" alt="macrame-jardin">
-            </div>
-            <div class="content_image">
-                <div class="image_info">
-                    <h1>Habitación</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti iure adipisci veniam. Vero autem cumque nisi pariatur amet culpa eligendi asperiores. Mollitia odio explicabo quidem fugiat laborum, optio soluta dignissimos?</p>
-                </div>
-                <img src="./assets/images/carpinteria.jpg" alt="macrame-decorativo">
-            </div>
-        </div>
+       <p>nuevo slider</p>
     </div>
 
     <div class="index-info-search">
