--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="box-flex-column center">
                         <div class="box-flex-row center">
                             <div class="left-arrow box-flex-center">&lt;</div>
-                            <div class="image-slider box-flex-center"><img src="./assets/images/results/Alemasan.jpeg" alt=""></div>
+                            <div class="image-slider box-flex-center"><img src="" alt=""></div>
                             <div class="right-arrow box-flex-center">&gt;</div>
                         </div>
                         <div class="slider-buttons box-flex-center">
@@ -61,7 +61,7 @@
                         coments here
                     </div>
                     <div id="modify-product" class="width-half box-flex-center">
-                        <button>delete</button>
+                        <button id="delete-self">delete</button>
                         <button>-</button>
                         <input type="text" readonly placeholder="1">
                         <button>+</button>
