MVC: Inventory-Controller

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     </div>
                     <div id="modify-product" class="width-half box-flex-center">
                         <button id="delete-self">delete</button>
-                        <button>-</button>
+                        <button id="substract-btn">-</button>
                         <input type="text" readonly placeholder="1">
-                        <button>+</button>
+                        <button id="plus-btn">+</button>
         
                     </div>
                 </div>
