Model: update(quantityOf...)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div id="modify-product" class="width-half box-flex-center">
                         <button id="delete-self">delete</button>
                         <button id="substract-btn">-</button>
-                        <input type="text" readonly placeholder="1">
+                        <input id="amount-input" type="text" readonly value="1">
                         <button id="plus-btn">+</button>
         
                     </div>
