InvetoryView: add-ons

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <div id="_product-view" class="">
                         <div class="box-flex-column center">
                             <div class="box-flex-row center">
-                                <div class="left-arrow box-flex-center">&lt;</div>
+                                <div id="left-arrow" class="box-flex-center">&lt;</div>
                                 <div class="image-slider box-flex-center"><img src="" alt=""></div>
-                                <div class="right-arrow box-flex-center">&gt;</div>
+                                <div id="right-arrow" class="box-flex-center">&gt;</div>
                             </div>
                             <div class="slider-buttons box-flex-center">
                                 <input type="radio" id="num" name="slider">
